--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: base
 ---
 <!-- List of Cheatsheets -->
 <h1>Cheatsheets</h1>
-<p>Learn all the keyboard shortcuts! View and print simplified keyboard shortcut documents for all your favorite tools.</p>
+<p>Learn all the keyboard shortcuts! View and print simplified keyboard shortcut documents for all your favorite tools. Want to see more cheatsheets for here?
+<a href='https://github.com/ursooperduper/cheatsheets'>Contribute to this project on Github!</a></p>
 <h3>Available Cheatsheets</h3>
 <ul class='cheat-list'>
   {% for cs in site.cheatsheets %}
