Adds 1Password, Dropbox, Evernote, Jira, and TweetDeck cheatsheets.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: base
 ---
 <!-- List of Cheatsheets -->
 <h1>Cheatsheets</h1>
-<p>Learn all the keyboard shortcuts! View and print simplified keyboard shortcut documents for all your favorite tools. Want to see more cheatsheets for here?
+<p>Learn all the keyboard shortcuts for Mac apps and tools! Here, you can view and print beautiful keyboard shortcut documents. Want to see more cheatsheets here?
 <a href='https://github.com/ursooperduper/cheatsheets'>Contribute to this project on Github!</a></p>
 <h3>Available Cheatsheets</h3>
 <ul class='cheat-list'>
